testsuite/poke.pkl/ass-map-diag-2.pk
/* { dg-do compile } */

type Packet = struct { int i; long j; };

var p = Packet @ 0#B;
Packet @ 0#B = p;  /* { dg-error "l-value.*simple type" } */
